# polyticker

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  backfill.py  collector.py  main.py  pyproject.toml  storage.py  websocket.py
.github/workflows/: test.yml
data/btc-updown-5m/1771992300/: event.json
data/btc-updown-5m/1771995300/: event.json  meta.json
data/btc-updown-5m/1771995600/: event.json  meta.json
data/btc-updown-5m/1771995900/: event.json  meta.json
data/btc-updown-5m/1771996200/: event.json  meta.json
data/btc-updown-5m/1771996500/: event.json  meta.json
data/btc-updown-5m/1771996800/: event.json  meta.json
data/btc-updown-5m/1771997100/: event.json  meta.json
data/btc-updown-5m/1771997400/: event.json  meta.json
data/btc-updown-5m/1771997700/: event.json  meta.json
data/btc-updown-5m/1771998000/: event.json  meta.json
data/btc-updown-5m/1771998300/: event.json  meta.json
data/btc-updown-5m/1771998600/: event.json  meta.json
data/btc-updown-5m/1771998900/: event.json  meta.json
docs/: README.md
docs/examples/: backtest.py  fetch.sh
docs/plans/: 2026-02-25-bulk-download-design.md  2026-02-25-bulk-download.md  2026-02-25-prebuilt-archives-design.md  2026-02-25-prebuilt-archives-plan.md
tests/: test_collector.py  test_market_channel.py  test_rtds.py  test_storage.py  test_websocket.py
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
worker/src/: archive.test.ts  archive.ts  bulk.test.ts  bulk.ts  index.test.ts  index.ts  tar.test.ts  tar.ts
(+138 files in other folders)
