[project]
name = "polyticker"
version = "0.1.0"
description = "Raw data collector for Polymarket BTC up/down markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
